tests/censoredusername/fail/crlf.wsa
push 1
push 2
add
pchr
exit
