tests/censoredusername/fail/crlf.err
Error: At index 6 (line 1, column 7):
Unrecognized symbol 
